@@ -33,16 +33,6 @@ import java.util.stream.Collectors;
 /**
  * Object value implementing Map semantics. The underlying map is immutable.
  * <p>
- * Metadata (including secret flag and attribute traces) is aggregated from all
- * values at construction time and
- * propagated back to all values. This ensures:
- * <ul>
- * <li>Zero-overhead reads - values already have merged metadata</li>
- * <li>Audit completeness - operations preserve all source attribute traces</li>
- * <li>Consistent secret handling - if any value is secret, all become
- * secret</li>
- * </ul>
- * <p>
  * Direct map usage:
  *
  * <pre>{@code
@@ -58,14 +48,7 @@ import java.util.stream.Collectors;
  *
  * <pre>{@code
  * ObjectValue metadata = ObjectValue.builder().put("resourceId", Value.of("doc-123")).put("owner", Value.of("bob"))
- *         .secret().build();
- * }</pre>
- * <p>
- * Secret propagation:
- *
- * <pre>{@code
- * ObjectValue credentials = obj.asSecret();
- * Value password = credentials.get("password"); // Already secret
+ *         .build();
  * }</pre>
  * <p>
  * Error handling:
@@ -80,73 +63,25 @@ public final class ObjectValue implements Value, Map<String, Value> {
     @Serial
     private static final long serialVersionUID = SaplVersion.VERSION_UID;
 
-    /**
-     * Singleton for secret empty object.
-     */
-    private static final ObjectValue SECRET_EMPTY_OBJECT = new ObjectValue(Map.of(), ValueMetadata.SECRET_EMPTY);
-
     @Delegate(excludes = ExcludedMethods.class)
     private final Map<String, Value> value;
-    private final ValueMetadata      metadata;
 
-    /**
-     * Creates an ObjectValue with specified metadata.
-     * <p>
-     * Aggregates metadata from all values and merges with the provided metadata,
-     * then propagates the merged result back
-     * to all values. This ensures operations preserve all source attribute traces.
-     * <p>
-     * Note: This does a defensive copy of the supplied Map. For better performance
-     * without the need to copy use the
-     * Builder!
-     *
-     * @param properties
-     * the map properties (defensively copied, must not be null)
-     * @param metadata
-     * the container metadata to merge with value metadata
-     */
-    public ObjectValue(@NonNull Map<String, Value> properties, @NonNull ValueMetadata metadata) {
-        val mergedMetadata = aggregateAndMerge(properties, metadata);
-        this.value    = propagateMetadata(properties, mergedMetadata);
-        this.metadata = mergedMetadata;
+    ObjectValue(@NonNull Map<String, Value> properties) {
+        this.value = Collections.unmodifiableMap(properties);
     }
 
-    /**
-     * Zero-copy constructor for builder use only. The supplied map is used directly
-     * without copying. Assumes metadata
-     * already propagated to values.
-     *
-     * @param metadata
-     * the pre-computed container metadata
-     * @param properties
-     * the map properties (used directly, must be mutable until wrapped)
-     */
-    private ObjectValue(ValueMetadata metadata, Map<String, Value> properties) {
-        this.value    = Collections.unmodifiableMap(properties);
-        this.metadata = metadata;
-    }
-
-    private static ValueMetadata aggregateAndMerge(Map<String, Value> properties, ValueMetadata containerMetadata) {
-        if (properties.isEmpty()) {
-            return containerMetadata;
+    public ObjectValue(@NonNull Value[] keysAndValues) {
+        if (keysAndValues.length % 2 != 0) {
+            throw new IllegalArgumentException("Keys and values must be provided in pairs.");
         }
-        var merged = containerMetadata;
-        for (Value propertyValue : properties.values()) {
-            merged = merged.merge(propertyValue.metadata());
+        var properties = new LinkedHashMap<String, Value>();
+        for (int i = 0; i < keysAndValues.length; i += 2) {
+            if (!(keysAndValues[i] instanceof TextValue key)) {
+                throw new IllegalArgumentException("Keys must be TextValue.");
+            }
+            properties.put(key.value(), keysAndValues[i + 1]);
         }
-        return merged;
-    }
-
-    private static Map<String, Value> propagateMetadata(Map<String, Value> properties, ValueMetadata targetMetadata) {
-        if (properties.isEmpty()) {
-            return Map.of();
-        }
-        // Preserve insertion order
-        var result = new LinkedHashMap<String, Value>();
-        for (var entry : properties.entrySet()) {
-            result.put(entry.getKey(), entry.getValue().withMetadata(targetMetadata));
-        }
-        return Collections.unmodifiableMap(result);
+        this.value = Collections.unmodifiableMap(properties);
     }
 
     /**
@@ -162,16 +97,11 @@ public final class ObjectValue implements Value, Map<String, Value> {
      * Builder for fluent ObjectValue construction.
      * <p>
      * Builders are single-use only. After calling build(), the builder cannot be
-     * reused. This prevents immutability
-     * violations from the zero-copy optimization.
-     * <p>
-     * The builder aggregates metadata from all added values. At build time, the
-     * merged metadata is propagated back to
-     * all values for consistent access.
+     * reused. This prevents immutability violations from the zero-copy
+     * optimization.
      */
     public static final class Builder {
         private LinkedHashMap<String, Value> properties = new LinkedHashMap<>();
-        private ValueMetadata                metadata   = ValueMetadata.EMPTY;
 
         /**
          * Adds a property to the object.
@@ -190,7 +120,6 @@ public final class ObjectValue implements Value, Map<String, Value> {
             if (properties == null) {
                 throw new IllegalStateException("Builder has already been used.");
             }
-            metadata = metadata.merge(value.metadata());
             properties.put(key, value);
             return this;
         }
@@ -217,50 +146,24 @@ public final class ObjectValue implements Value, Map<String, Value> {
         }
 
         /**
-         * Marks the object as secret.
-         * <p>
-         * Note: For performance reasons, if possible call this method as early as
-         * possible in the building process.
+         * Adds all properties from an ObjectValue.
+         *
+         * @param objectValue
+         * the ObjectValue to copy properties from
          *
          * @return this builder
          *
          * @throws IllegalStateException
          * if builder has already been used
          */
-        public Builder secret() {
-            if (properties == null) {
-                throw new IllegalStateException("Builder has already been used.");
-            }
-            metadata = metadata.asSecret();
-            return this;
+        public Builder putAll(ObjectValue objectValue) {
+            return putAll((Map<String, Value>) objectValue);
         }
 
         /**
-         * Merges additional metadata into the builder.
-         *
-         * @param additionalMetadata
-         * the metadata to merge
-         *
-         * @return this builder
-         *
-         * @throws IllegalStateException
-         * if builder has already been used
-         */
-        public Builder withMetadata(ValueMetadata additionalMetadata) {
-            if (properties == null) {
-                throw new IllegalStateException("Builder has already been used.");
-            }
-            metadata = metadata.merge(additionalMetadata);
-            return this;
-        }
-
-        /**
-         * Builds the immutable ObjectValue. Returns singleton for empty non-secret
-         * objects.
+         * Builds the immutable ObjectValue. Returns singleton for empty objects.
          * <p>
-         * At build time, the aggregated metadata is propagated to all values for
-         * consistent access. After calling this
-         * method, the builder cannot be reused.
+         * After calling this method, the builder cannot be reused.
          *
          * @return the constructed ObjectValue
          *
@@ -271,48 +174,22 @@ public final class ObjectValue implements Value, Map<String, Value> {
             if (properties == null) {
                 throw new IllegalStateException("Builder has already been used.");
             }
-            if (properties.isEmpty() && metadata == ValueMetadata.EMPTY) {
+            if (properties.isEmpty()) {
                 properties = null;
                 return Value.EMPTY_OBJECT;
             }
-            if (properties.isEmpty() && metadata.secret() && metadata.attributeTrace().isEmpty()) {
-                properties = null;
-                return SECRET_EMPTY_OBJECT;
-            }
-            if (properties.isEmpty()) {
-                properties = null;
-                return new ObjectValue(metadata, Map.of());
-            }
-            // Propagate merged metadata to all values
-            properties.replaceAll((key, propertyValue) -> propertyValue.withMetadata(metadata));
-            val result = new ObjectValue(metadata, properties);
+            val result = new ObjectValue(properties);
             properties = null;
             return result;
         }
     }
 
     @Override
-    public ValueMetadata metadata() {
-        return metadata;
-    }
-
-    @Override
-    public Value withMetadata(ValueMetadata newMetadata) {
-        if (newMetadata == metadata) {
-            return this;
-        }
-        return new ObjectValue(value, newMetadata);
-    }
-
-    @Override
     public @NotNull String toString() {
-        if (isSecret()) {
-            return SECRET_PLACEHOLDER;
-        }
         if (value.isEmpty()) {
             return "{}";
         }
-        return '{' + value.entrySet().stream().map(e -> e.getKey() + ": " + e.getValue().toString())
+        return '{' + value.entrySet().stream().map(e -> '"' + e.getKey() + '"' + "=" + e.getValue().toString())
                 .collect(Collectors.joining(", ")) + '}';
     }
 
@@ -334,8 +211,7 @@ public final class ObjectValue implements Value, Map<String, Value> {
      * Returns the value for the specified key.
      * <p>
      * Returns ErrorValue for invalid key types instead of throwing
-     * ClassCastException, consistent with SAPL's
-     * error-as-value model. Values already have the container's metadata applied.
+     * ClassCastException, consistent with SAPL's error-as-value model.
      *
      * @param key
      * the key (must be a String)
@@ -346,11 +222,11 @@ public final class ObjectValue implements Value, Map<String, Value> {
     @Override
     public @Nullable Value get(Object key) {
         if (key == null) {
-            return new ErrorValue("Object key cannot be null.", metadata);
+            return new ErrorValue("Object key cannot be null.");
         }
         if (!(key instanceof String)) {
             return new ErrorValue(
-                    "Invalid key type: expected String, got %s.".formatted(key.getClass().getSimpleName()), metadata);
+                    "Invalid key type: expected String, got %s.".formatted(key.getClass().getSimpleName()));
         }
         return value.get(key);
     }
@@ -359,8 +235,7 @@ public final class ObjectValue implements Value, Map<String, Value> {
      * Returns the value for the specified key, or defaultValue if not found.
      * <p>
      * Returns ErrorValue for invalid key types instead of throwing
-     * ClassCastException. Values already have the
-     * container's metadata applied.
+     * ClassCastException.
      *
      * @param key
      * the key (must be a String)
@@ -373,15 +248,15 @@ public final class ObjectValue implements Value, Map<String, Value> {
     @Override
     public @NotNull Value getOrDefault(Object key, Value defaultValue) {
         if (key == null) {
-            return new ErrorValue("Object key cannot be null.", metadata);
+            return new ErrorValue("Object key cannot be null.");
         }
         if (!(key instanceof String)) {
             return new ErrorValue(
-                    "Invalid key type: expected String, got %s.".formatted(key.getClass().getSimpleName()), metadata);
+                    "Invalid key type: expected String, got %s.".formatted(key.getClass().getSimpleName()));
         }
         val valueForKey = value.get(key);
         if (valueForKey == null) {
-            return defaultValue.withMetadata(metadata);
+            return defaultValue;
         }
         return valueForKey;
     }
@@ -403,8 +278,7 @@ public final class ObjectValue implements Value, Map<String, Value> {
 
     /**
      * Methods excluded from Lombok delegation to preserve Value semantics. These
-     * methods require custom implementations
-     * for error handling and type safety.
+     * methods require custom implementations for error handling and type safety.
      */
     private interface ExcludedMethods {
         boolean equals(Object obj);
